@@ -72,7 +72,7 @@ command *command_new (const char *name);
  * Terminate arguments with NULL.
  */
 command *command_new_argv (const char *name, va_list argv);
-command *command_new_args (const char *name, ...);
+command *command_new_args (const char *name, ...) ATTRIBUTE_SENTINEL;
 
 /* Split argstr on whitespace to construct a command and arguments,
  * honouring shell-style single-quoting, double-quoting, and backslashes,
@@ -92,7 +92,7 @@ void command_arg (command *cmd, const char *arg);
  * Terminate arguments with NULL.
  */
 void command_argv (command *cmd, va_list argv);
-void command_args (command *cmd, ...);
+void command_args (command *cmd, ...) ATTRIBUTE_SENTINEL;
 
 /* Split argstr on whitespace to add a list of arguments, honouring
  * shell-style single-quoting, double-quoting, and backslashes, but not
@@ -116,7 +116,7 @@ pipeline *pipeline_new (void);
  * Terminate commands with NULL.
  */
 pipeline *pipeline_new_commandv (command *cmd1, va_list cmdv);
-pipeline *pipeline_new_commands (command *cmd1, ...);
+pipeline *pipeline_new_commands (command *cmd1, ...) ATTRIBUTE_SENTINEL;
 
 /* Joins two pipelines, neither of which are allowed to be started. Discards
  * want_out and outfd from p1, and want_in and infd from p2.
@@ -127,7 +127,8 @@ pipeline *pipeline_join (pipeline *p1, pipeline *p2);
 void pipeline_command (pipeline *p, command *cmd);
 
 /* Construct a new command and add it to a pipeline in one go. */
-void pipeline_command_args (pipeline *p, const char *name, ...);
+void pipeline_command_args (pipeline *p, const char *name, ...)
+	ATTRIBUTE_SENTINEL;
 
 /* Construct a new command from a shell-quoted string and add it to a
  * pipeline in one go. See the comment against command_new_argstr() above if
@@ -139,7 +140,7 @@ void pipeline_command_argstr (pipeline *p, const char *argstr);
  * Terminate commands with NULL.
  */
 void pipeline_commandv (pipeline *p, va_list cmdv);
-void pipeline_commands (pipeline *p, ...);
+void pipeline_commands (pipeline *p, ...) ATTRIBUTE_SENTINEL;
 
 /* Get streams corresponding to infd and outfd respectively. The pipeline
  * must be started.
